<?xml version="1.0"?>
<package format="2">
  <name>husarion_controller</name>
  <version>0.1.0</version>
  <description>The husarion-controller package developed by Mingi Jeong for CS 81</description>

  <maintainer email="mingi.jeong.gr@dartmouth.edu">Mingi Jeong</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>

</package>
